backend/infra/k8s-prod/auth-mongo-depl.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-mongo-depl
spec:
  serviceName: "auth-mongo"
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo:4.4.4-bionic
          volumeMounts:
            - name: auth-storage
              mountPath: "/data/db"
  volumeClaimTemplates:
    - metadata:
        name: auth-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: do-block-storage
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
