backend/infra/k8s-prod/files-mongo-depl.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: files-mongo-depl
spec:
  serviceName: "files-mongo"
  replicas: 1
  selector:
    matchLabels:
      app: files-mongo
  template:
    metadata:
      labels:
        app: files-mongo
    spec:
      containers:
        - name: files-mongo
          image: mongo:4.4.4-bionic
          volumeMounts:
            - name: files-storage
              mountPath: "/data/db"
  volumeClaimTemplates:
    - metadata:
        name: files-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: do-block-storage
---
apiVersion: v1
kind: Service
metadata:
  name: files-mongo-srv
spec:
  selector:
    app: files-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
