backend/infra/k8s-prod/ingress-srv.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '1200'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1200'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1200'
    nginx.ingress.kubernetes.io/send-timeout: '1200'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/session-cookie-samesite: 'None'
    nginx.ingress.kubernetes.io/session-cookie-conditional-samesite-none: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
    - hosts:
        - my-apps.me
        - www.my-apps.me
      secretName: vicara-prod-tls

  rules:
    - host: www.my-apps.me
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/files/?(.*)
            backend:
              serviceName: upload-srv
              servicePort: 3000
          - path: /api/folders/?(.*)
            backend:
              serviceName: upload-srv
              servicePort: 3000
          - path: /api/browse/?(.*)
            backend:
              serviceName: browse-srv
              servicePort: 3000
          - path: /api/downloads/?(.*)
            backend:
              serviceName: download-srv
              servicePort: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.my-apps.me'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
